Method: getBestSelling; Returns a sorted array from best selling to least selling